@@ -40,18 +40,13 @@ import net.rptools.lib.CodeTimer;
 import net.rptools.lib.MD5Key;
 import net.rptools.lib.image.ImageUtil;
 import net.rptools.maptool.client.*;
-import net.rptools.maptool.client.events.ZoneLoaded;
 import net.rptools.maptool.client.functions.TokenMoveFunctions;
-import net.rptools.maptool.client.swing.ImageBorder;
 import net.rptools.maptool.client.swing.ImageLabel;
 import net.rptools.maptool.client.swing.SwingUtil;
 import net.rptools.maptool.client.swing.label.FlatImageLabelFactory;
 import net.rptools.maptool.client.tool.PointerTool;
 import net.rptools.maptool.client.tool.StampTool;
-import net.rptools.maptool.client.tool.Tool;
-import net.rptools.maptool.client.tool.drawing.ExposeTool;
 import net.rptools.maptool.client.ui.Scale;
-import net.rptools.maptool.client.ui.theme.Borders;
 import net.rptools.maptool.client.ui.theme.Images;
 import net.rptools.maptool.client.ui.theme.RessourceManager;
 import net.rptools.maptool.client.ui.token.AbstractTokenOverlay;
@@ -59,6 +54,7 @@ import net.rptools.maptool.client.ui.token.BarTokenOverlay;
 import net.rptools.maptool.client.ui.token.dialog.create.NewTokenDialog;
 import net.rptools.maptool.client.ui.zone.*;
 import net.rptools.maptool.client.ui.zone.gdx.GdxRenderer;
+import net.rptools.maptool.client.ui.zone.renderer.tokenRender.FacingArrowRenderer;
 import net.rptools.maptool.client.ui.zone.renderer.tokenRender.TokenRenderer;
 import net.rptools.maptool.client.walker.ZoneWalker;
 import net.rptools.maptool.events.MapToolEventBus;
@@ -88,6 +84,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   /** DebounceExecutor for throttling repaint() requests. */
   private final DebounceExecutor repaintDebouncer;
 
+  private final ZoneViewModel viewModel;
+
   /** Noise for mask on repeating tiles. */
   private DrawableNoise noise = null;
 
@@ -107,42 +105,33 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
 
   private Scale zoneScale;
   private final Map<Zone.Layer, DrawableRenderer> drawableRenderers;
-  private final List<ZoneOverlay> overlayList = new ArrayList<ZoneOverlay>();
-  private final Map<Zone.Layer, List<TokenPosition>> tokenPositionMap =
-      new HashMap<Zone.Layer, List<TokenPosition>>();
-  private final List<LabelLocation> labelLocationList = new LinkedList<LabelLocation>();
-  private Map<Token, Set<Token>> tokenStackMap;
-  private final Map<GUID, SelectionSet> selectionSetMap = new HashMap<GUID, SelectionSet>();
-  private final Map<Token, TokenPosition> tokenPositionCache = new HashMap<Token, TokenPosition>();
-  private final List<TokenPosition> markerPositionList = new ArrayList<TokenPosition>();
-  private GeneralPath facingArrow;
-  private final List<Token> showPathList = new ArrayList<Token>();
-  private boolean showAllPaths = true; // Jamz: new option to show path
+  private final List<ZoneOverlay> overlayList = new ArrayList<>();
+  private final List<LabelLocation> labelLocationList = new LinkedList<>();
+  private final Map<GUID, SelectionSet> selectionSetMap = new HashMap<>();
+  private final List<Token> showPathList = new ArrayList<>();
+
   // Optimizations
-  final Map<GUID, BufferedImage> labelRenderingCache = new HashMap<GUID, BufferedImage>();
-  private final Map<Token, BufferedImage> flipImageMap = new HashMap<Token, BufferedImage>();
-  private final Map<Token, BufferedImage> flipIsoImageMap = new HashMap<Token, BufferedImage>();
+  final Map<GUID, BufferedImage> labelRenderingCache = new HashMap<>();
+  private final Map<Token, BufferedImage> flipImageMap = new HashMap<>();
+  private final Map<Token, BufferedImage> flipIsoImageMap = new HashMap<>();
   private Token tokenUnderMouse;
 
   private ScreenPoint pointUnderMouse;
   private @Nonnull Zone.Layer activeLayer = Layer.getDefaultPlayerLayer();
-  private String loadingProgress;
-  private boolean isLoaded;
 
   private BufferedImage miniImage;
-  private BufferedImage backbuffer;
+  private BufferedImage backBuffer;
   private boolean drawBackground = true;
   private int lastX;
   private int lastY;
   private double lastScale;
   private Area visibleScreenArea;
-  private final List<ItemRenderer> itemRenderList = new LinkedList<ItemRenderer>();
+  private final List<ItemRenderer> itemRenderList = new LinkedList<>();
   private PlayerView lastView;
-  private Set<GUID> visibleTokenSet = new HashSet<>();
 
   private boolean autoResizeStamp = false;
 
-  /** Store previous view to restore to, eg after GM shows ctrl+shift+space pointer */
+  /** Store previous view to restore to, e.g. after GM shows ctrl+shift+space pointer */
   private double previousScale;
 
   private ZonePoint previousZonePoint;
@@ -152,6 +141,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   private final GridRenderer gridRenderer;
   private final HaloRenderer haloRenderer;
   private final TokenRenderer tokenRenderer;
+  private final FacingArrowRenderer facingArrowRenderer;
+  private final SelectionRenderer selectionRenderer;
   private final LightsRenderer lightsRenderer;
   private final DarknessRenderer darknessRenderer;
   private final LumensRenderer lumensRenderer;
@@ -159,19 +150,9 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   private final VisionOverlayRenderer visionOverlayRenderer;
   private final DebugRenderer debugRenderer;
 
-  public String getLoadingProgress() {
-    return loadingProgress;
-  }
-
   public Token getTokenUnderMouse() {
     return tokenUnderMouse;
   }
-
-  public Map<Token, Set<Token>> getTokenStackMap() {
-    return tokenStackMap;
-  }
-
-  private boolean skipDrawing;
 
   /**
    * Constructor for the ZoneRenderer from a zone.
@@ -183,7 +164,9 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       throw new IllegalArgumentException("Zone cannot be null");
     }
     this.zone = zone;
+    selectionModel = new SelectionModel(zone);
     zoneView = new ZoneView(zone);
+    this.viewModel = new ZoneViewModel(zone, zoneView, selectionModel);
     setZoneScale(new Scale());
 
     drawableRenderers =
@@ -193,8 +176,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     var renderHelper = new RenderHelper(this, tempBufferPool);
     this.compositor = new ZoneCompositor();
     this.gridRenderer = new GridRenderer();
-    this.haloRenderer = new HaloRenderer();
-    this.tokenRenderer = new TokenRenderer();
+    this.haloRenderer = new HaloRenderer(renderHelper);
+    this.tokenRenderer = new TokenRenderer(renderHelper, zone);
+    this.facingArrowRenderer = new FacingArrowRenderer(renderHelper, zone);
+    this.selectionRenderer = new SelectionRenderer(renderHelper, viewModel, zoneView);
     this.lightsRenderer = new LightsRenderer(renderHelper, zone, zoneView);
     this.darknessRenderer = new DarknessRenderer(renderHelper, zoneView);
     this.lumensRenderer = new LumensRenderer(renderHelper, zone, zoneView);
@@ -205,9 +190,6 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
         new DebounceExecutor(1000 / AppPreferences.frameRateCap.get(), this::repaint);
 
     setFocusable(true);
-    selectionModel = new SelectionModel(zone);
-
-    // add(MapTool.getFrame().getFxPanel(), PositionalLayout.Position.NW);
 
     // DnD
     setTransferHandler(new TransferableHelper());
@@ -229,9 +211,6 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           public void mouseExited(MouseEvent e) {
             pointUnderMouse = null;
           }
-
-          @Override
-          public void mouseEntered(MouseEvent e) {}
         });
     addMouseMotionListener(
         new MouseMotionAdapter() {
@@ -289,7 +268,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   public ZonePoint getCenterPoint() {
-    return new ScreenPoint(getSize().width / 2, getSize().height / 2).convertToZone(this);
+    return new ScreenPoint(getSize().width / 2d, getSize().height / 2d).convertToZone(this);
   }
 
   public boolean isPathShowing(Token token) {
@@ -444,10 +423,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
                 set.getWalker() != null ? set.getWalker().getPath() : set.getGridlessPath();
             // Jamz: add final path render here?
 
-            List<GUID> filteredTokens = new ArrayList<GUID>();
+            List<GUID> filteredTokens = new ArrayList<>();
             moveTimer.stop("setup");
 
-            moveTimer.start("eachtoken");
+            moveTimer.start("each-token");
             for (GUID tokenGUID : selectionSet) {
               Token token = zone.getToken(tokenGUID);
               // If the token has been deleted, the GUID will still be in the
@@ -467,26 +446,24 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
                     case ZonePoint zp -> zp;
                   };
               token.moveDragAnchorTo(zone, endPoint);
-              log.info("Token end pos: {}, {}", token.getX(), token.getY());
+              log.debug("Token end pos: {}, {}", token.getX(), token.getY());
 
               flush(token);
               MapTool.serverCommand().putToken(zone.getId(), token);
 
-              // Only add certain tokens to the list to process in the move
-              // Macro function(s).
+              // Only add certain tokens to the list to process in the move Macro function(s).
               if (token.getLayer().supportsWalker() && token.isVisible()) {
                 filteredTokens.add(tokenGUID);
               }
 
               changedMaskTopologyTypes.addAll(token.getMaskTopologyTypes());
             }
-            moveTimer.stop("eachtoken");
+            moveTimer.stop("each-token");
 
             moveTimer.start("onTokenMove");
             if (!filteredTokens.isEmpty()) {
               // give onTokenMove a chance to reject each token's movement.
-              // pass in all the tokens at once so it doesn't have to re-scan for handlers for each
-              // token
+              // to avoid re-scanning for handlers on each token we pass in all the tokens at once
               List<Token> tokensToCheck =
                   filteredTokens.stream().map(zone::getToken).collect(Collectors.toList());
               List<Token> tokensDenied =
@@ -498,11 +475,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
             moveTimer.stop("onTokenMove");
 
             moveTimer.start("onMultipleTokensMove");
-            // Multiple tokens, the list of tokens and call
-            // onMultipleTokensMove() macro function.
+            // Multiple tokens, the list of tokens, and call onMultipleTokensMove() macro function.
             if (filteredTokens.size() > 1) {
-              // now determine if the macro returned false and if so
-              // revert each token's move to the last path.
+              // now determine if the macro returned false and if so, revert each token's move to
+              // the last path.
               boolean moveDenied = TokenMoveFunctions.callForMultiTokenMoveVeto(filteredTokens);
               if (moveDenied) {
                 for (GUID tokenGUID : filteredTokens) {
@@ -536,11 +512,11 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   private void denyMovement(final Token token) {
     Path<?> path = token.getLastPath();
     if (path != null) {
-      ZonePoint zp = null;
-      if (path.getCellPath().get(0) instanceof CellPoint) {
-        zp = zone.getGrid().convert((CellPoint) path.getCellPath().get(0));
+      ZonePoint zp;
+      if (path.getCellPath().getFirst() instanceof CellPoint) {
+        zp = zone.getGrid().convert((CellPoint) path.getCellPath().getFirst());
       } else {
-        zp = (ZonePoint) path.getCellPath().get(0);
+        zp = (ZonePoint) path.getCellPath().getFirst();
       }
       // Relocate
       token.setX(zp.x);
@@ -560,12 +536,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   public boolean isTokenMoving(Token token) {
-    for (SelectionSet set : selectionSetMap.values()) {
-      if (set.contains(token)) {
-        return true;
-      }
-    }
-    return false;
+    return viewModel.isTokenMoving(token.getId());
   }
 
   protected void setViewOffset(int x, int y) {
@@ -589,27 +560,21 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   /**
-   * Remove the token from: {@link #tokenPositionCache}, {@link #flipImageMap}, {@link
-   * #flipIsoImageMap}, {@link #labelRenderingCache}. Set the {@link #visibleScreenArea}, {@link
-   * #tokenStackMap} to null. Flush the token from {@link #zoneView}.
+   * Remove the token from: {@link #flipImageMap}, {@link #flipIsoImageMap}, {@link
+   * #labelRenderingCache}. Set the {@link #visibleScreenArea} to null. Flush the token from {@link
+   * #zoneView}.
    *
    * @param token the token to flush
    */
   public void flush(Token token) {
-    // This method can be called from a non-EDT thread so if that happens, make sure
-    // we synchronize with the EDT.
-    synchronized (tokenPositionCache) {
-      tokenPositionCache.remove(token);
-    }
+    // This method can be called from a non-EDT thread so if that happens, make sure we synchronize
+    // with the EDT.
     flipImageMap.remove(token);
     flipIsoImageMap.remove(token);
     labelRenderingCache.remove(token.getId());
 
     // This should be smarter, but whatever
     visibleScreenArea = null;
-
-    // This could also be smarter
-    tokenStackMap = null;
 
     zoneView.flush(token);
     GdxRenderer.getInstance().flushFog();
@@ -622,12 +587,18 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     return zoneView;
   }
 
+  public ZoneViewModel getViewModel() {
+    return viewModel;
+  }
+
   public SelectionModel getSelectionModel() {
     return selectionModel;
   }
 
-  /** Clear internal caches and backbuffers */
+  /** Clear internal caches and back-buffers */
   public void flush() {
+    viewModel.flush();
+
     if (zone.getBackgroundPaint() instanceof DrawableTexturePaint) {
       ImageManager.flushImage(((DrawableTexturePaint) zone.getBackgroundPaint()).getAssetId());
     }
@@ -637,8 +608,6 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     flipImageMap.clear();
     flipIsoImageMap.clear();
     zoneView.flushFog();
-
-    isLoaded = false;
   }
 
   /** Flush the {@link #zoneView} and repaint. */
@@ -718,7 +687,6 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     int width = getWidth();
     int height = getHeight();
 
-    // if (((double) width / height) < ((double) gmWidth / gmHeight))
     if ((width * gmHeight) < (height * gmWidth)) {
       // Our aspect ratio is narrower than server's, so fit to width
       scale = scale * width / gmWidth;
@@ -745,7 +713,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   public void forcePlayersView() {
-    ZonePoint zp = new ScreenPoint(getWidth() / 2, getHeight() / 2).convertToZone(this);
+    ZonePoint zp = new ScreenPoint(getWidth() / 2d, getHeight() / 2d).convertToZone(this);
     MapTool.serverCommand()
         .enforceZoneView(getZone().getId(), zp.x, zp.y, getScale(), getWidth(), getHeight());
   }
@@ -767,53 +735,65 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
         timer -> {
           timer.setThreshold(10);
 
-          timer.start("paintComponent");
-          skipDrawing = MapTool.getFrame().getGdxPanel().isVisible();
+          timer.start("update");
+          viewModel.update();
+          final var skipDrawing = viewModel.isUsingGdxRenderer();
+          timer.stop("update");
 
-          Graphics2D g2d = (Graphics2D) g;
+          if (!skipDrawing) {
+            // Clear internal state
+            itemRenderList.clear();
 
-          timer.start("paintComponent:allocateBuffer");
-          tempBufferPool.setWidth(getSize().width);
-          tempBufferPool.setHeight(getSize().height);
-          tempBufferPool.setConfiguration(g2d.getDeviceConfiguration());
-          timer.stop("paintComponent:allocateBuffer");
+            if (!compositor.isInitialised()) {
+              compositor.setRenderer(this);
+            }
+            if (!gridRenderer.isInitialised()) {
+              gridRenderer.setRenderer(this);
+            }
 
-          try (final var bufferHandle = tempBufferPool.acquire()) {
-            final var buffer = bufferHandle.get();
-            final var bufferG2d = buffer.createGraphics();
-            // Keep the clip so we don't render more than we have to.
-            bufferG2d.setClip(g2d.getClip());
+            timer.start("paintComponent");
+            Graphics2D g2d = (Graphics2D) g;
 
-            timer.start("paintComponent:createView");
-            PlayerView pl = getPlayerView();
-            timer.stop("paintComponent:createView");
+            timer.start("paintComponent:allocateBuffer");
+            tempBufferPool.setWidth(getSize().width);
+            tempBufferPool.setHeight(getSize().height);
+            tempBufferPool.setConfiguration(g2d.getDeviceConfiguration());
+            timer.stop("paintComponent:allocateBuffer");
 
-            if (!skipDrawing) {
+            try (final var bufferHandle = tempBufferPool.acquire()) {
+              final var buffer = bufferHandle.get();
+
+              final var bufferG2d = buffer.createGraphics();
+              // Keep the clip to avoid rendering more than we have to.
+              bufferG2d.setClip(g2d.getClip());
+
+              timer.start("paintComponent:createView");
+              PlayerView pl = getPlayerView();
+              timer.stop("paintComponent:createView");
+
               renderZone(bufferG2d, pl);
-            }
-            int noteVPos = 20;
-            bufferG2d.setFont(AppStyle.labelFont);
-            if (MapTool.getFrame().areFullScreenToolsShown()) {
-              noteVPos += 40;
-            }
-            if (!AppPreferences.mapVisibilityWarning.get()
-                && (!zone.isVisible() && pl.isGMView())
-                && !skipDrawing) {
-              GraphicsUtil.drawBoxedString(
-                  bufferG2d, I18N.getText("zone.map_not_visible"), getSize().width / 2, noteVPos);
-              noteVPos += 20;
-            }
-            if (AppState.isShowAsPlayer() && !skipDrawing) {
-              GraphicsUtil.drawBoxedString(
-                  bufferG2d, I18N.getText("zone.player_view"), getSize().width / 2, noteVPos);
-            }
 
-            timer.start("paintComponent:renderBuffer");
-            bufferG2d.dispose();
-            if (!skipDrawing) {
+              int noteVPos = 20;
+              bufferG2d.setFont(AppStyle.labelFont);
+              if (MapTool.getFrame().areFullScreenToolsShown()) {
+                noteVPos += 40;
+              }
+              if (!AppPreferences.mapVisibilityWarning.get()
+                  && (!zone.isVisible() && pl.isGMView())) {
+                GraphicsUtil.drawBoxedString(
+                    bufferG2d, I18N.getText("zone.map_not_visible"), getSize().width / 2, noteVPos);
+                noteVPos += 20;
+              }
+              if (AppState.isShowAsPlayer()) {
+                GraphicsUtil.drawBoxedString(
+                    bufferG2d, I18N.getText("zone.player_view"), getSize().width / 2, noteVPos);
+              }
+
+              timer.start("paintComponent:renderBuffer");
+              bufferG2d.dispose();
               g2d.drawImage(buffer, null, 0, 0);
+              timer.stop("paintComponent:renderBuffer");
             }
-            timer.stop("paintComponent:renderBuffer");
           }
 
           timer.stop("paintComponent");
@@ -821,18 +801,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   public PlayerView getPlayerView() {
-    return getPlayerView(MapTool.getPlayer().getEffectiveRole());
-  }
-
-  /**
-   * The returned {@link PlayerView} contains a list of tokens that includes all selected tokens
-   * that this player owns and that have their <code>HasSight</code> checkbox enabled.
-   *
-   * @param role the player role
-   * @return the player view
-   */
-  public PlayerView getPlayerView(Player.Role role) {
-    return getPlayerView(role, true);
+    return viewModel.getPlayerView();
   }
 
   /**
@@ -844,26 +813,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
    * @param selected whether to get the view of selected tokens, or all owned
    * @return the player view
    */
-  public PlayerView getPlayerView(Player.Role role, boolean selected) {
-    List<Token> selectedTokens = null;
-    if (selected && selectionModel.isAnyTokenSelected()) {
-      selectedTokens = getSelectedTokensList();
-      selectedTokens.removeIf(token -> !token.getHasSight() || !AppUtil.playerOwns(token));
-    }
-    if (selectedTokens == null || selectedTokens.isEmpty()) {
-      // if no selected token qualifying for view, use owned tokens or player tokens with sight
-      final boolean checkOwnership =
-          MapTool.getServerPolicy().isUseIndividualViews() || MapTool.isPersonalServer();
-      selectedTokens =
-          checkOwnership
-              ? zone.getOwnedTokensWithSight(MapTool.getPlayer())
-              : zone.getPlayerTokensWithSight();
-    }
-    if (selectedTokens == null || selectedTokens.isEmpty()) {
-      return new PlayerView(role);
-    }
-
-    return new PlayerView(role, selectedTokens);
+  public PlayerView makePlayerView(Player.Role role, boolean selected) {
+    return viewModel.makePlayerView(role, selected);
   }
 
   /**
@@ -901,50 +852,30 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     timer.start("setup");
     g2d = (Graphics2D) g2d.create();
 
-    // Clear internal state
-    tokenPositionMap.clear();
-    markerPositionList.clear();
-    itemRenderList.clear();
-
-    if (!compositor.isInitialised()) {
-      compositor.setRenderer(this);
-    }
-    if (!gridRenderer.isInitialised()) {
-      gridRenderer.setRenderer(this);
-    }
-    if (!haloRenderer.isInitialised()) {
-      haloRenderer.setRenderer(this);
-    }
-    if (!tokenRenderer.isInitialised()) {
-      tokenRenderer.setRenderer(this);
-    }
-
     Rectangle viewRect = new Rectangle(getSize().width, getSize().height);
 
     g2d.setFont(AppStyle.labelFont);
     SwingUtil.useAntiAliasing(g2d);
 
-    Area viewArea = new Area(viewRect);
     // much of the raster code assumes the user clip is set
     if (g2d.getClipBounds() == null) {
       g2d.setClip(0, 0, viewRect.width, viewRect.height);
     }
+
     // Are we still waiting to show the zone ?
-    if (isLoading()) {
-      if (!skipDrawing) {
-        g2d.setColor(Color.black);
-        g2d.fillRect(0, 0, viewRect.width, viewRect.height);
-        GraphicsUtil.drawBoxedString(g2d, loadingProgress, viewRect.width / 2, viewRect.height / 2);
-      }
+    var loadingProgress = viewModel.getLoadingStatus();
+    if (loadingProgress.isPresent()) {
+      g2d.setColor(Color.black);
+      g2d.fillRect(0, 0, viewRect.width, viewRect.height);
+      GraphicsUtil.drawBoxedString(
+          g2d, loadingProgress.get(), viewRect.width / 2, viewRect.height / 2);
       return;
     }
     if (MapTool.getCampaign().isBeingSerialized()) {
-      if (!skipDrawing) {
-        g2d.setColor(Color.black);
-        g2d.fillRect(0, 0, viewRect.width, viewRect.height);
-        GraphicsUtil.drawBoxedString(
-            g2d, "    Please Wait    ", viewRect.width / 2, viewRect.height / 2);
-      }
+      g2d.setColor(Color.black);
+      g2d.fillRect(0, 0, viewRect.width, viewRect.height);
+      GraphicsUtil.drawBoxedString(
+          g2d, "    Please Wait    ", viewRect.width / 2, viewRect.height / 2);
       return;
     }
     if (zone == null) {
@@ -979,18 +910,18 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     timer.stop("calcs-1");
 
     // Rendering pipeline
-    if (zone.drawBoard() && !skipDrawing) {
+    if (zone.drawBoard()) {
       timer.start("board");
       renderBoard(g2d, view);
       timer.stop("board");
     }
     if (shouldRenderLayer(Zone.Layer.BACKGROUND, view)) {
       List<DrawnElement> drawables = zone.getDrawnElements(Layer.BACKGROUND);
-      // if (!drawables.isEmpty()) {
+
       timer.start("drawableBackground");
       renderDrawableOverlay(g2d, drawableRenderers.get(Layer.BACKGROUND), view, drawables);
       timer.stop("drawableBackground");
-      // }
+
       List<Token> background = zone.getTokensOnLayer(Layer.BACKGROUND, false);
       if (!background.isEmpty()) {
         timer.start("tokensBackground");
@@ -1001,11 +932,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     if (shouldRenderLayer(Zone.Layer.OBJECT, view)) {
       // Drawables on the object layer are always below the grid, and...
       List<DrawnElement> drawables = zone.getDrawnElements(Layer.OBJECT);
-      // if (!drawables.isEmpty()) {
+
       timer.start("drawableObjects");
       renderDrawableOverlay(g2d, drawableRenderers.get(Layer.OBJECT), view, drawables);
       timer.stop("drawableObjects");
-      // }
     }
     timer.start("grid");
 
@@ -1029,7 +959,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
 
     darknessRenderer.render(g2d, view);
 
-    /**
+    /*
      * The following sections used to handle rendering of the Hidden (i.e. "GM") layer followed by
      * the Token layer. The problem was that we want all drawables to appear below all tokens, and
      * the old configuration performed the rendering in the following order:
@@ -1052,19 +982,18 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
      */
     if (shouldRenderLayer(Zone.Layer.TOKEN, view)) {
       List<DrawnElement> drawables = zone.getDrawnElements(Layer.TOKEN);
-      // if (!drawables.isEmpty()) {
+
       timer.start("drawableTokens");
       renderDrawableOverlay(g2d, drawableRenderers.get(Layer.TOKEN), view, drawables);
       timer.stop("drawableTokens");
-      // }
 
       if (shouldRenderLayer(Zone.Layer.GM, view)) {
         drawables = zone.getDrawnElements(Layer.GM);
-        // if (!drawables.isEmpty()) {
+
         timer.start("drawableGM");
         renderDrawableOverlay(g2d, drawableRenderers.get(Layer.GM), view, drawables);
         timer.stop("drawableGM");
-        // }
+
         List<Token> stamps = zone.getTokensOnLayer(Layer.GM, false);
         if (!stamps.isEmpty()) {
           timer.start("tokensGM");
@@ -1083,7 +1012,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       timer.stop("unowned movement");
     }
 
-    // (This method has it's own 'timer' calls)
+    // (This method has its own 'timer' calls)
     if (AppState.getShowTextLabels()) {
       renderLabels(g2d, view);
     }
@@ -1104,7 +1033,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       // if there is fog or vision we may need to re-render figure type tokens
       // and figure tokens need sorting via alternative logic.
       List<Token> tokens = zone.getFigureTokens();
-      List<Token> sortedTokens = new ArrayList<Token>(tokens);
+      List<Token> sortedTokens = new ArrayList<>(tokens);
       sortedTokens.sort(zone.getFigureZOrderComparator());
       if (!tokens.isEmpty()) {
         timer.start("tokens - figures");
@@ -1117,11 +1046,9 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       timer.stop("owned movement");
 
       // Text associated with tokens being moved is added to a list to be drawn after, i.e. on top
-      // of, the tokens
-      // themselves.
+      // of, the tokens themselves.
       // So if one moving token is on top of another moving token, at least the textual identifiers
-      // will be
-      // visible.
+      // will be visible.
       timer.start("token name/labels");
       renderRenderables(g2d);
       timer.stop("token name/labels");
@@ -1147,8 +1074,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     timer.start("lightSourceIconOverlay.paintOverlay");
     if (shouldRenderLayer(Zone.Layer.TOKEN, view)
         && view.isGMView()
-        && AppState.isShowLightSources()
-        && !skipDrawing) {
+        && AppState.isShowLightSources()) {
       lightSourceIconOverlay.paintOverlay(this, g2d);
     }
     timer.stop("lightSourceIconOverlay.paintOverlay");
@@ -1161,7 +1087,6 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   private void renderRenderables(Graphics2D g) {
-    if (skipDrawing) return;
     for (ItemRenderer renderer : itemRenderList) {
       renderer.render(g);
     }
@@ -1182,16 +1107,16 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     var labelRenderFactory = new FlatImageLabelFactory();
     labelLocationList.clear();
     for (Label label : zone.getLabels()) {
-      var flabel = labelRenderFactory.getMapImageLabel(label);
+      var fLabel = labelRenderFactory.getMapImageLabel(label);
       ZonePoint zp = new ZonePoint(label.getX(), label.getY());
       if (!zone.isPointVisible(zp, view)) {
         continue;
       }
       timer.start("labels-1.1");
       ScreenPoint sp = ScreenPoint.fromZonePointRnd(this, zp.x, zp.y);
-      var dim = flabel.getDimensions(g, label.getLabel());
+      var dim = fLabel.getDimensions(g, label.getLabel());
       Rectangle bounds =
-          flabel.render(
+          fLabel.render(
               g, (int) (sp.x - dim.width / 2), (int) (sp.y - dim.height / 2), label.getLabel());
       labelLocationList.add(new LabelLocation(bounds, label));
       timer.stop("labels-1.1");
@@ -1199,55 +1124,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     timer.stop("labels-1");
   }
 
-  public boolean isLoading() {
-    if (isLoaded) {
-      // We're done, until the cache is cleared
-      return false;
-    }
-    // Get a list of all the assets in the zone
-    Set<MD5Key> assetSet = zone.getAllAssetIds();
-    assetSet.remove(null); // remove bad data
-
-    // Make sure they are loaded
-    int downloadCount = 0;
-    int cacheCount = 0;
-    boolean loaded = true;
-    for (MD5Key id : assetSet) {
-      // Have we gotten the actual data yet ?
-      Asset asset = AssetManager.getAsset(id);
-      if (asset == null) {
-        AssetManager.getAssetAsynchronously(id);
-        loaded = false;
-        continue;
-      }
-      downloadCount++;
-
-      // Have we loaded the image into memory yet ?
-      Image image = ImageManager.getImage(asset.getMD5Key(), this);
-      if (image == null || image == ImageManager.TRANSFERING_IMAGE) {
-        loaded = false;
-        continue;
-      }
-      cacheCount++;
-    }
-    loadingProgress =
-        String.format(
-            " Loading Map '%s' - %d/%d Loaded %d/%d Cached",
-            zone.getDisplayName(), downloadCount, assetSet.size(), cacheCount, assetSet.size());
-    isLoaded = loaded;
-    if (isLoaded) {
-      // Notify the token tree that it should update
-      MapTool.getFrame().updateTokenTree();
-
-      new MapToolEventBus().getMainEventBus().post(new ZoneLoaded(zone));
-    }
-    return !isLoaded;
-  }
-
   protected void renderDrawableOverlay(
       Graphics g, DrawableRenderer renderer, PlayerView view, List<DrawnElement> drawnElements) {
-    if (skipDrawing) return;
-
     Rectangle viewport =
         new Rectangle(
             zoneScale.getOffsetX(), zoneScale.getOffsetY(), getSize().width, getSize().height);
@@ -1257,10 +1135,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
 
   protected void renderBoard(Graphics2D g, PlayerView view) {
     Dimension size = getSize();
-    if (backbuffer == null
-        || backbuffer.getWidth() != size.width
-        || backbuffer.getHeight() != size.height) {
-      backbuffer = new BufferedImage(size.width, size.height, Transparency.OPAQUE);
+    if (backBuffer == null
+        || backBuffer.getWidth() != size.width
+        || backBuffer.getHeight() != size.height) {
+      backBuffer = new BufferedImage(size.width, size.height, Transparency.OPAQUE);
       drawBackground = true;
     }
     Scale scale = getZoneScale();
@@ -1274,7 +1152,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       zone.setBoardChanged(false);
     }
     if (drawBackground) {
-      Graphics2D bbg = backbuffer.createGraphics();
+      Graphics2D bbg = backBuffer.createGraphics();
       AppPreferences.renderQuality.get().setRenderingHints(bbg);
 
       // Background texture
@@ -1308,11 +1186,11 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     lastY = scale.getOffsetY();
     lastScale = scale.getScale();
 
-    g.drawImage(backbuffer, 0, 0, this);
+    g.drawImage(backBuffer, 0, 0, this);
   }
 
   public Set<SelectionSet> getOwnedMovementSet(PlayerView view) {
-    Set<SelectionSet> movementSet = new HashSet<SelectionSet>();
+    Set<SelectionSet> movementSet = new HashSet<>();
     for (SelectionSet selection : selectionSetMap.values()) {
       if (selection.getPlayerId().equals(MapTool.getPlayer().getName())) {
         movementSet.add(selection);
@@ -1322,7 +1200,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   public Set<SelectionSet> getUnOwnedMovementSet(PlayerView view) {
-    Set<SelectionSet> movementSet = new HashSet<SelectionSet>();
+    Set<SelectionSet> movementSet = new HashSet<>();
     for (SelectionSet selection : selectionSetMap.values()) {
       if (!selection.getPlayerId().equals(MapTool.getPlayer().getName())) {
         movementSet.add(selection);
@@ -1332,7 +1210,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   protected void showBlockedMoves(Graphics2D g, PlayerView view, Set<SelectionSet> movementSet) {
-    if (selectionSetMap.isEmpty() || skipDrawing) {
+    if (selectionSetMap.isEmpty()) {
       return;
     }
     g = (Graphics2D) g.create();
@@ -1405,7 +1283,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
                 this, footprintBounds.x + set.getOffsetX(), footprintBounds.y + set.getOffsetY());
 
         // get token image, using image table if present
-        BufferedImage image = getTokenImage(token);
+        BufferedImage image = ImageUtil.getTokenImage(token, this);
 
         int scaledWidth = (int) (footprintBounds.width * scale);
         int scaledHeight = (int) (footprintBounds.height * scale);
@@ -1454,37 +1332,41 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           wig.dispose();
         }
         // on the iso plane
-        if (token.getIsFlippedIso()) {
-          if (flipIsoImageMap.get(token) == null) {
-            workImage = IsometricGrid.isoImage(workImage);
-          } else {
-            workImage = flipIsoImageMap.get(token);
+        double iso_ho = 0;
+        if (getZone().getGrid().isIsometric()) {
+          if (token.getIsFlippedIso()) {
+            if (flipIsoImageMap.get(token) == null) {
+              workImage = IsometricGrid.isoImage(workImage);
+            } else {
+              workImage = flipIsoImageMap.get(token);
+            }
+            token.setHeight(workImage.getHeight());
+            token.setWidth(workImage.getWidth());
+            footprintBounds = token.getBounds(zone);
           }
-          token.setHeight(workImage.getHeight());
-          token.setWidth(workImage.getWidth());
-          footprintBounds = token.getBounds(zone);
+          iso_ho = ImageUtil.getIsoFigureHeightOffset(token, footprintBounds) * getScale();
         }
+
         // Draw token
-        double iso_ho = ImageUtil.getIsoFigureHeightOffset(token, footprintBounds) * getScale();
         Dimension imgSize = new Dimension(workImage.getWidth(), workImage.getHeight());
         SwingUtil.constrainTo(imgSize, footprintBounds.width, footprintBounds.height);
 
-        int offsetx = 0;
-        int offsety = 0;
+        int offsetX = 0;
+        int offsetY = 0;
         if (token.isSnapToScale()) {
-          offsetx =
+          offsetX =
               (int)
                   (imgSize.width < footprintBounds.width
                       ? (footprintBounds.width - imgSize.width) / 2 * getScale()
                       : 0);
-          offsety =
+          offsetY =
               (int)
                   (imgSize.height < footprintBounds.height
                       ? (footprintBounds.height - imgSize.height) / 2 * getScale()
                       : 0);
         }
-        int tx = x + offsetx;
-        int ty = y + offsety + (int) iso_ho;
+        int tx = x + offsetX;
+        int ty = y + offsetY + (int) iso_ho;
 
         AffineTransform at = new AffineTransform();
         at.translate(tx, ty);
@@ -1492,10 +1374,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
         if (token.hasFacing() && token.getShape() == Token.TokenShape.TOP_DOWN) {
           at.rotate(
               Math.toRadians(token.getFacingInDegrees()),
-              scaledWidth / 2 - token.getAnchor().x * scale - offsetx,
-              scaledHeight / 2
+              scaledWidth / 2d - token.getAnchor().x * scale - offsetX,
+              scaledHeight / 2d
                   - token.getAnchor().y * scale
-                  - offsety); // facing defaults to down, or -90 degrees
+                  - offsetY); // facing defaults to down, or -90 degrees
         }
         if (token.isSnapToScale()) {
           at.scale(
@@ -1518,9 +1400,11 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
 
         // Other details.
         // If the token is visible on the screen it will be in the location cache
+        var tokenPosition = viewModel.getTokenPositions().get(token.getId());
         if (token == keyToken
             && (isOwner || shouldShowMovementLabels(token, set, clearArea))
-            && tokenPositionCache.containsKey(token)) {
+            && viewModel.getViewport().intersects(tokenPosition.footprintBounds())
+            && zoneView.getVisibleArea(view).intersects(tokenPosition.footprintBounds())) {
           var labelY = y + 10 + scaledHeight;
           var labelX = x + scaledWidth / 2;
 
@@ -1532,7 +1416,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
               labelY += 20;
             }
           }
-          if (set.getPlayerId() != null && set.getPlayerId().length() >= 1) {
+          if (set.getPlayerId() != null && !set.getPlayerId().isEmpty()) {
             delayRendering(new LabelRenderer(this, set.getPlayerId(), labelX, labelY));
           }
         }
@@ -1616,7 +1500,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     double scale = getScale();
 
     Rectangle footprintBounds = footprint.getBounds(grid);
-    if (path.getCellPath().get(0) instanceof CellPoint) {
+    if (path.getCellPath().getFirst() instanceof CellPoint) {
       timer.start("renderPath-1");
       CellPoint previousPoint = null;
       Point previousHalfPoint = null;
@@ -1624,8 +1508,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       Path<CellPoint> pathCP = (Path<CellPoint>) path;
       List<CellPoint> cellPath = pathCP.getCellPath();
 
-      Set<CellPoint> pathSet = new HashSet<CellPoint>();
-      List<ZonePoint> waypointList = new LinkedList<ZonePoint>();
+      Set<CellPoint> pathSet = new HashSet<>();
+      List<ZonePoint> waypointList = new LinkedList<>();
       for (CellPoint p : cellPath) {
         pathSet.addAll(footprint.getOccupiedCells(p));
 
@@ -1639,8 +1523,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       }
 
       // Don't show the final path point as a waypoint, it's redundant, and ugly
-      if (waypointList.size() > 0) {
-        waypointList.remove(waypointList.size() - 1);
+      if (!waypointList.isEmpty()) {
+        waypointList.removeLast();
       }
       timer.stop("renderPath-1");
 
@@ -1648,16 +1532,16 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       Dimension cellOffset = zone.getGrid().getCellOffset();
       for (CellPoint p : pathSet) {
         ZonePoint zp = grid.convert(p);
-        zp.x += grid.getCellWidth() / 2 + cellOffset.width;
-        zp.y += grid.getCellHeight() / 2 + cellOffset.height;
+        zp.x += (int) (grid.getCellWidth() / 2 + cellOffset.width);
+        zp.y += (int) (grid.getCellHeight() / 2 + cellOffset.height);
         highlightCell(g, zp, grid.getCellHighlight(), 1.0f);
       }
       if (AppState.getShowMovementMeasurements()) {
         double cellAdj = grid.isHex() ? 2.5 : 2;
         for (CellPoint p : cellPath) {
           ZonePoint zp = grid.convert(p);
-          zp.x += grid.getCellWidth() / cellAdj + cellOffset.width;
-          zp.y += grid.getCellHeight() / cellAdj + cellOffset.height;
+          zp.x += (int) (grid.getCellWidth() / cellAdj + cellOffset.width);
+          zp.y += (int) (grid.getCellHeight() / cellAdj + cellOffset.height);
           addDistanceText(
               g, zp, 1.0f, p.getDistanceTraveled(zone), p.getDistanceTraveledWithoutTerrain());
         }
@@ -1699,9 +1583,9 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
             ScreenPoint origin = ScreenPoint.fromZonePoint(this, ox, oy);
             ScreenPoint destination = ScreenPoint.fromZonePoint(this, dx, dy);
 
-            int halfx = (int) ((origin.x + destination.x) / 2);
-            int halfy = (int) ((origin.y + destination.y) / 2);
-            Point halfPoint = new Point(halfx, halfy);
+            int halfX = (int) ((origin.x + destination.x) / 2);
+            int halfY = (int) ((origin.y + destination.y) / 2);
+            Point halfPoint = new Point(halfX, halfY);
 
             if (previousHalfPoint != null) {
               int x1 = previousHalfPoint.x + xOffset;
@@ -1724,7 +1608,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       timer.stop("renderPath-2");
     } else {
       timer.start("renderPath-3");
-      // Zone point/gridless path
+      // Zone point/grid-less path
 
       // Line
       Color highlight = new Color(255, 255, 255, 80);
@@ -1740,15 +1624,15 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           lastPoint =
               ScreenPoint.fromZonePointRnd(
                   this,
-                  zp.x + (footprintBounds.width / 2) * footprint.getScale(),
-                  zp.y + (footprintBounds.height / 2) * footprint.getScale());
+                  zp.x + (footprintBounds.width / 2d) * footprint.getScale(),
+                  zp.y + (footprintBounds.height / 2d) * footprint.getScale());
           continue;
         }
         ScreenPoint nextPoint =
             ScreenPoint.fromZonePoint(
                 this,
-                zp.x + (footprintBounds.width / 2) * footprint.getScale(),
-                zp.y + (footprintBounds.height / 2) * footprint.getScale());
+                zp.x + (footprintBounds.width / 2d) * footprint.getScale(),
+                zp.y + (footprintBounds.height / 2d) * footprint.getScale());
 
         g.setColor(highlight);
         g.setStroke(highlightStroke);
@@ -1771,7 +1655,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
         }
 
         // Skip the final point
-        if (p == pathList.get(pathList.size() - 1)) {
+        if (p == pathList.getLast()) {
           continue;
         }
         p =
@@ -1790,16 +1674,16 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     Graphics g = this.getGraphics();
 
     Grid grid = zone.getGrid();
-    double cwidth = grid.getCellWidth() * getScale();
-    double cheight = grid.getCellHeight() * getScale();
+    double cWidth = grid.getCellWidth() * getScale();
+    double cHeight = grid.getCellHeight() * getScale();
 
-    double iwidth = cwidth;
-    double iheight = cheight;
+    double iWidth = cWidth;
+    double iHeight = cHeight;
 
     ScreenPoint sp = ScreenPoint.fromZonePoint(this, x, y);
 
-    int cellX = (int) (sp.x - iwidth / 2);
-    int cellY = (int) (sp.y - iheight / 2);
+    int cellX = (int) (sp.x - iWidth / 2);
+    int cellY = (int) (sp.y - iHeight / 2);
 
     // Draw distance for each cell
     int fontSize = (int) (getScale() * 12);
@@ -1814,13 +1698,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     g.setFont(font);
     g.setColor(Color.BLACK);
 
-    // log.info("Text: [" + text + "], width: " + textWidth + ", font size: " + fontSize + ",
-    // offset: " + textOffset);
-
     g.drawString(
         text,
-        (int) (cellX + cwidth - textWidth - textOffset),
-        (int) (cellY + cheight - textOffset));
+        (int) (cellX + cWidth - textWidth - textOffset),
+        (int) (cellY + cHeight - textOffset));
     g.setFont(originalFont);
   }
 
@@ -1871,11 +1752,11 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     double resizeWidth = zone.getGrid().getCellWidth() / image.getWidth() * .25;
     double resizeHeight = zone.getGrid().getCellHeight() / image.getHeight() * .25;
 
-    double cwidth = image.getWidth() * getScale() * resizeWidth;
-    double cheight = image.getHeight() * getScale() * resizeHeight;
+    double cWidth = image.getWidth() * getScale() * resizeWidth;
+    double cHeight = image.getHeight() * getScale() * resizeHeight;
 
-    double iwidth = cwidth * size;
-    double iheight = cheight * size;
+    double iWidth = cWidth * size;
+    double iHeight = cHeight * size;
 
     ScreenPoint sp = ScreenPoint.fromZonePoint(this, point);
 
@@ -1883,30 +1764,30 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
 
     g.drawImage(
         image,
-        (int) (sp.x - iwidth / 2),
-        (int) (sp.y - iheight / 2),
-        (int) iwidth,
-        (int) iheight,
+        (int) (sp.x - iWidth / 2),
+        (int) (sp.y - iHeight / 2),
+        (int) iWidth,
+        (int) iHeight,
         this);
     g.setTransform(backup);
   }
 
   public void highlightCell(Graphics2D g, ZonePoint point, BufferedImage image, float size) {
     Grid grid = zone.getGrid();
-    double cwidth = grid.getCellWidth() * getScale();
-    double cheight = grid.getCellHeight() * getScale();
+    double cWidth = grid.getCellWidth() * getScale();
+    double cHeight = grid.getCellHeight() * getScale();
 
-    double iwidth = cwidth * size;
-    double iheight = cheight * size;
+    double iWidth = cWidth * size;
+    double iHeight = cHeight * size;
 
     ScreenPoint sp = ScreenPoint.fromZonePoint(this, point);
 
     g.drawImage(
         image,
-        (int) (sp.x - iwidth / 2),
-        (int) (sp.y - iheight / 2),
-        (int) iwidth,
-        (int) iheight,
+        (int) (sp.x - iWidth / 2),
+        (int) (sp.y - iHeight / 2),
+        (int) iWidth,
+        (int) iHeight,
         this);
   }
 
@@ -1917,16 +1798,16 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     }
 
     Grid grid = zone.getGrid();
-    double cwidth = grid.getCellWidth() * getScale();
-    double cheight = grid.getCellHeight() * getScale();
+    double cWidth = grid.getCellWidth() * getScale();
+    double cHeight = grid.getCellHeight() * getScale();
 
-    double iwidth = cwidth * size;
-    double iheight = cheight * size;
+    double iWidth = cWidth * size;
+    double iHeight = cHeight * size;
 
     ScreenPoint sp = ScreenPoint.fromZonePoint(this, point);
 
-    int cellX = (int) (sp.x - iwidth / 2);
-    int cellY = (int) (sp.y - iheight / 2);
+    int cellX = (int) (sp.x - iWidth / 2);
+    int cellY = (int) (sp.y - iHeight / 2);
 
     // Draw distance for each cell
     double fontScale = (double) grid.getSize() / 50; // Font size of 12 at grid size 50 is default
@@ -1950,8 +1831,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
 
     g.drawString(
         distanceText,
-        (int) (cellX + cwidth - textWidth - textOffset),
-        (int) (cellY + cheight - textOffset));
+        (int) (cellX + cWidth - textWidth - textOffset),
+        (int) (cellY + cHeight - textOffset));
     g.setFont(originalFont);
   }
 
@@ -1962,13 +1843,11 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
    * @return the token list
    */
   public List<Token> getTokensOnScreen() {
-    List<Token> list = new ArrayList<Token>();
+    List<Token> list = new ArrayList<>();
 
     // Always assume tokens, for now
-    List<TokenPosition> tokenPositionListCopy =
-        new ArrayList<TokenPosition>(getTokenPositions(getActiveLayer()));
-    for (TokenPosition location : tokenPositionListCopy) {
-      list.add(location.token);
+    for (ZoneViewModel.TokenPosition location : getTokenPositions(getActiveLayer())) {
+      list.add(location.token());
     }
 
     // Sort by location on screen, top left to bottom right
@@ -2001,11 +1880,11 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   /**
-   * Get the token locations for the given layer, creates an empty list if there are not locations
+   * Get the token locations for the given layer, creates an empty list if there are no locations
    * for the given layer
    */
-  private List<TokenPosition> getTokenPositions(Zone.Layer layer) {
-    return tokenPositionMap.computeIfAbsent(layer, k -> new LinkedList<>());
+  private List<ZoneViewModel.TokenPosition> getTokenPositions(Zone.Layer layer) {
+    return viewModel.getTokenPositionsForLayer(layer);
   }
 
   protected void renderTokens(Graphics2D g, List<Token> tokenList, PlayerView view) {
@@ -2025,7 +1904,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     if (!isGMView
         && visibleScreenArea != null
         && !tokenList.isEmpty()
-        && tokenList.get(0).getLayer().supportsVision()) {
+        && tokenList.getFirst().getLayer().supportsVision()) {
       clippedG = (Graphics2D) g.create();
 
       Area visibleArea = new Area(g.getClipBounds());
@@ -2035,29 +1914,17 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     }
     timer.stop("createClip");
 
-    // This is in screen coordinates
-    Rectangle viewport = new Rectangle(0, 0, getSize().width, getSize().height);
-
-    Rectangle clipBounds = g.getClipBounds();
     double scale = zoneScale.getScale();
-    Set<GUID> tempVisTokens = new HashSet<GUID>();
 
-    // calculations
-    boolean calculateStacks =
-        !tokenList.isEmpty() && tokenList.get(0).getLayer().isTokenLayer() && tokenStackMap == null;
-    if (calculateStacks) {
-      tokenStackMap = new HashMap<Token, Set<Token>>();
-    }
-
-    List<Token> tokenPostProcessing = new ArrayList<Token>(tokenList.size());
+    List<Token> tokenPostProcessing = new ArrayList<>(tokenList.size());
     for (Token token : tokenList) {
       if (token.getShape() != Token.TokenShape.FIGURE && figuresOnly && !token.isAlwaysVisible()) {
         continue;
       }
 
-      timer.start("tokenlist-1");
+      timer.start("token-list-1");
       try {
-        if (token.getLayer().isStampLayer() && isTokenMoving(token)) {
+        if (token.getLayer().isStampLayer() && viewModel.isTokenMoving(token.getId())) {
           continue;
         }
         // Don't bother if it's not visible
@@ -2071,34 +1938,29 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
         }
       } finally {
         // This ensures that the timer is always stopped
-        timer.stop("tokenlist-1");
+        timer.stop("token-list-1");
       }
-      timer.start("tokenlist-1.1");
-      TokenPosition position = tokenPositionCache.get(token);
-      if (position != null && !position.maybeOnscreen(viewport)) {
-        timer.stop("tokenlist-1.1");
+      timer.start("token-list-1.1");
+      ZoneViewModel.TokenPosition position = viewModel.getTokenPositions().get(token.getId());
+      if (position != null && !position.transformedBounds().intersects(viewModel.getViewport())) {
+        timer.stop("token-list-1.1");
         continue;
       }
-      timer.stop("tokenlist-1.1");
+      timer.stop("token-list-1.1");
 
-      timer.start("tokenlist-1a");
+      timer.start("token-list-1a");
       Rectangle footprintBounds = token.getBounds(zone);
-      timer.stop("tokenlist-1a");
+      timer.stop("token-list-1a");
 
-      timer.start("tokenlist-1b");
-      // get token image, using image table if present
-      BufferedImage image = getTokenImage(token);
-      timer.stop("tokenlist-1b");
-
-      timer.start("tokenlist-1c");
+      timer.start("token-list-1c");
       double scaledWidth = (footprintBounds.width * scale);
       double scaledHeight = (footprintBounds.height * scale);
 
       ScreenPoint tokenScreenLocation =
           ScreenPoint.fromZonePoint(this, footprintBounds.x, footprintBounds.y);
-      timer.stop("tokenlist-1c");
+      timer.stop("token-list-1c");
 
-      timer.start("tokenlist-1d");
+      timer.start("token-list-1d");
       // Tokens are centered on the image center point
       double x = tokenScreenLocation.x;
       double y = tokenScreenLocation.y;
@@ -2112,97 +1974,18 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
             AffineTransform.getRotateInstance(Math.toRadians(token.getFacingInDegrees()), sx, sy));
         // facing defaults to down or -90 degrees
       }
-      timer.stop("tokenlist-1d");
+      timer.stop("token-list-1d");
 
-      timer.start("tokenlist-1e");
+      timer.start("token-list-1e");
       try {
-        position =
-            new TokenPosition(
-                this,
-                tokenBounds,
-                origBounds,
-                token,
-                x,
-                y,
-                footprintBounds.width,
-                footprintBounds.height,
-                scaledWidth,
-                scaledHeight);
-        tokenPositionCache.put(token, position);
-        // Too small ?
-        if (position.scaledHeight < 1 || position.scaledWidth < 1) {
+        if (!viewModel.getVisibleTokens(token.getLayer()).contains(token.getId())) {
+          // Token not on screen or otherwise not visible.
           continue;
-        }
-        // Vision visibility
-        if (!isGMView && token.getLayer().supportsVision() && zoneView.isUsingVision()) {
-          if (!GraphicsUtil.intersects(visibleScreenArea, position.bounds)) {
-            continue;
-          }
         }
       } finally {
         // This ensures that the timer is always stopped
-        timer.stop("tokenlist-1e");
+        timer.stop("token-list-1e");
       }
-      // Markers
-      timer.start("renderTokens:Markers");
-      if (token.isMarker() && canSeeMarker(token)) {
-        markerPositionList.add(position);
-      }
-      timer.stop("renderTokens:Markers");
-
-      // Stacking check
-      if (calculateStacks) {
-        timer.start("tokenStack");
-
-        Set<Token> tokenStackSet = null;
-        for (TokenPosition currPosition : getTokenPositions(Zone.Layer.TOKEN)) {
-          // Are we covering anyone ?
-          if (position.boundsCache.contains(currPosition.boundsCache)) {
-            if (tokenStackSet == null) {
-              tokenStackSet = new HashSet<Token>();
-              // Sometimes got NPE here
-              if (tokenStackMap == null) {
-                tokenStackMap = new HashMap<Token, Set<Token>>();
-              }
-              tokenStackMap.put(token, tokenStackSet);
-              tokenStackSet.add(token);
-            }
-            tokenStackSet.add(currPosition.token);
-
-            if (tokenStackMap.get(currPosition.token) != null) {
-              tokenStackSet.addAll(tokenStackMap.get(currPosition.token));
-              tokenStackMap.remove(currPosition.token);
-            }
-          }
-        }
-        timer.stop("tokenStack");
-      }
-
-      // Keep track of the position on the screen
-      // Note the order -- the top most token is at the end of the list
-      timer.start("renderTokens:Locations");
-      Zone.Layer layer = token.getLayer();
-      List<TokenPosition> locationList = getTokenPositions(layer);
-      if (locationList != null) {
-        locationList.add(position);
-      }
-      timer.stop("renderTokens:Locations");
-
-      // Add the token to our visible set.
-      tempVisTokens.add(token.getId());
-
-      // Only draw if we're visible
-      // NOTE: this takes place AFTER resizing the image, that's so that the user
-      // suffers a pause only once while scaling, and not as new tokens are
-      // scrolled onto the screen
-      timer.start("renderTokens:OnscreenCheck");
-      if (!position.bounds.intersects(clipBounds)) {
-        timer.stop("renderTokens:OnscreenCheck");
-        continue;
-      }
-      timer.stop("renderTokens:OnscreenCheck");
-
-      if (skipDrawing) continue;
 
       // create a per token Graphics object - normally clipped, unless always visible
       Area tokenCellArea = zone.getGrid().getTokenCellArea(tokenBounds);
@@ -2221,7 +2004,12 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       }
       timer.stop("renderTokens:ShowPath");
 
-      timer.start("tokenlist-5");
+      timer.start("token-list-1b");
+      // get token image, using image table if present
+      BufferedImage image = ImageUtil.getTokenImage(token, this);
+      timer.stop("token-list-1b");
+
+      timer.start("token-list-5");
       // handle flipping
       BufferedImage workImage = image;
       if (token.isFlippedX() || token.isFlippedY()) {
@@ -2242,10 +2030,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           flipImageMap.put(token, workImage);
         }
       }
-      timer.stop("tokenlist-5");
+      timer.stop("token-list-5");
 
-      timer.start("tokenlist-5a");
-      if (token.getIsFlippedIso()) {
+      timer.start("token-list-5a");
+      if (token.getIsFlippedIso() && getZone().getGrid().isIsometric()) {
         if (flipIsoImageMap.get(token) == null) {
           workImage = IsometricGrid.isoImage(workImage);
           flipIsoImageMap.put(token, workImage);
@@ -2254,99 +2042,32 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
         }
         token.setHeight(workImage.getHeight());
         token.setWidth(workImage.getWidth());
-        footprintBounds = token.getBounds(zone);
       }
-      timer.stop("tokenlist-5a");
-
-      timer.start("tokenlist-6");
-      // Position
-      // For Isometric Grid we alter the height offset
-      double iso_ho = 0;
-      Dimension imgSize = new Dimension(workImage.getWidth(), workImage.getHeight());
-      if (token.getShape() == TokenShape.FIGURE) {
-        double th = token.getHeight() * (double) footprintBounds.width / token.getWidth();
-        iso_ho = footprintBounds.height - th;
-        footprintBounds =
-            new Rectangle(
-                footprintBounds.x,
-                footprintBounds.y - (int) iso_ho,
-                footprintBounds.width,
-                (int) th);
-        iso_ho = iso_ho * getScale();
-      }
-      SwingUtil.constrainTo(imgSize, footprintBounds.width, footprintBounds.height);
-
-      int offsetx = 0;
-      int offsety = 0;
-
-      if (token.isSnapToScale()) {
-        offsetx =
-            (int)
-                (imgSize.width < footprintBounds.width
-                    ? (footprintBounds.width - imgSize.width) / 2 * getScale()
-                    : 0);
-        offsety =
-            (int)
-                (imgSize.height < footprintBounds.height
-                    ? (footprintBounds.height - imgSize.height) / 2 * getScale()
-                    : 0);
-      }
-      double tx = position.x + offsetx;
-      double ty = position.y + offsety + iso_ho;
-
-      AffineTransform at = new AffineTransform();
-      at.translate(tx, ty);
-
-      // Rotated
-      if (token.hasFacing() && token.getShape() == Token.TokenShape.TOP_DOWN) {
-        at.rotate(
-            Math.toRadians(token.getFacingInDegrees()),
-            position.scaledWidth / 2 - (token.getAnchor().x * scale) - offsetx,
-            position.scaledHeight / 2 - (token.getAnchor().y * scale) - offsety);
-        // facing defaults to down, or -90 degrees
-      }
-      // Snap
-      if (token.isSnapToScale()) {
-        at.scale(
-            ((double) imgSize.width) / workImage.getWidth(),
-            ((double) imgSize.height) / workImage.getHeight());
-        at.scale(getScale(), getScale());
-      } else {
-        if (token.getShape() == TokenShape.FIGURE) {
-          at.scale(scaledWidth / workImage.getWidth(), scaledWidth / workImage.getWidth());
-        } else {
-          at.scale(scaledWidth / workImage.getWidth(), scaledHeight / workImage.getHeight());
-        }
-      }
-      timer.stop("tokenlist-6");
+      timer.stop("token-list-5a");
 
       // Render Halo
       haloRenderer.renderHalo(tokenG, token, position);
 
-      // Calculate alpha Transparency from token and use opacity for indicating that token is moving
+      // Calculate alpha Transparency from token and use opacity to indicate that token is moving
       float opacity = token.getTokenOpacity();
-      if (isTokenMoving(token)) {
+      if (viewModel.isTokenMoving(token.getId())) {
         opacity = opacity / 2.0f;
       }
-      Map<String, Object> renderInfo = new HashMap<>();
-      renderInfo.put(TokenRenderer.OPACITY, opacity);
-      renderInfo.put(TokenRenderer.GRAPHICS, tokenG);
-      renderInfo.put(TokenRenderer.POSITION, position);
       // Finally render the token image
-      timer.start("tokenlist-7");
+      timer.start("token-list-7");
       if (!isGMView && zoneView.isUsingVision() && (token.getShape() == Token.TokenShape.FIGURE)) {
         Area cb = zone.getGrid().getTokenCellArea(tokenBounds);
         if (GraphicsUtil.intersects(visibleScreenArea, cb)) {
           // the cell intersects visible area so
           if (zone.getGrid().checkCenterRegion(cb.getBounds(), visibleScreenArea)) {
             // if we can see the centre, draw the whole token
-            tokenRenderer.renderToken(token, renderInfo);
+            tokenRenderer.renderToken(token, position, tokenG, opacity);
           } else {
             // else draw the clipped token
             Area cellArea = new Area(visibleScreenArea);
             cellArea.intersect(cb);
-            renderInfo.put(TokenRenderer.CLIP, cellArea);
-            tokenRenderer.renderToken(token, renderInfo);
+            tokenG.setClip(cellArea);
+            tokenRenderer.renderToken(token, position, tokenG, opacity);
           }
         }
       } else if (!isGMView && zoneView.isUsingVision() && token.isAlwaysVisible()) {
@@ -2356,33 +2077,33 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           // if we can see a portion of the stamp/token, draw the whole thing, defaults to 2/9ths
           if (zone.getGrid()
               .checkRegion(cb.getBounds(), visibleScreenArea, token.getAlwaysVisibleTolerance())) {
-            tokenRenderer.renderToken(token, renderInfo);
+            tokenRenderer.renderToken(token, position, tokenG, opacity);
           } else {
             // else draw the clipped stamp/token
             // This will only show the part of the token that does not have VBL on it
             // as any VBL on the token will block LOS, affecting the clipping.
             Area cellArea = new Area(visibleScreenArea);
             cellArea.intersect(cb);
-            renderInfo.put(TokenRenderer.CLIP, cellArea);
-            tokenRenderer.renderToken(token, renderInfo);
+            tokenG.setClip(cellArea);
+            tokenRenderer.renderToken(token, position, tokenG, opacity);
           }
         }
       } else {
         // fallthrough normal token rendered against visible area
-        tokenRenderer.renderToken(token, renderInfo);
+        tokenRenderer.renderToken(token, position, tokenG, opacity);
       }
-      timer.stop("tokenlist-7");
+      timer.stop("token-list-7");
 
-      timer.start("tokenlist-8");
+      timer.start("token-list-8");
       // Facing
       if (token.hasFacing()) {
-        tokenRenderer.paintFacingArrow(tokenG, token, footprintBounds, position);
+        facingArrowRenderer.paintArrow(tokenG, position);
       }
-      timer.stop("tokenlist-8");
+      timer.stop("token-list-8");
 
-      timer.start("tokenlist-9");
+      timer.start("token-list-9");
       // Set up the graphics so that the overlay can just be painted.
-      Graphics2D locg =
+      Graphics2D locG =
           (Graphics2D)
               tokenG.create(
                   (int) tokenBounds.getBounds().getX(),
@@ -2408,11 +2129,11 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
             || !overlay.showPlayer(token, MapTool.getPlayer())) {
           continue;
         }
-        overlay.paintOverlay(locg, token, bounds, stateValue);
+        overlay.paintOverlay(locG, token, bounds, stateValue);
       }
-      timer.stop("tokenlist-9");
+      timer.stop("token-list-9");
 
-      timer.start("tokenlist-10");
+      timer.start("token-list-10");
 
       for (String bar : MapTool.getCampaign().getTokenBarsMap().keySet()) {
         Object barValue = token.getState(bar);
@@ -2423,81 +2144,33 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           continue;
         }
 
-        overlay.paintOverlay(locg, token, bounds, barValue);
+        overlay.paintOverlay(locG, token, bounds, barValue);
       }
-      locg.dispose();
-      timer.stop("tokenlist-10");
+      locG.dispose();
+      timer.stop("token-list-10");
 
-      timer.start("tokenlist-11");
-      // Keep track of which tokens have been drawn so we can perform post-processing on them later
+      timer.start("token-list-11");
+      // Keep track of which tokens have been drawn for post-processing on them later
       // (such as selection borders and names/labels)
       if (getActiveLayer().equals(token.getLayer())) {
         tokenPostProcessing.add(token);
       }
-      timer.stop("tokenlist-11");
+      timer.stop("token-list-11");
     }
-    timer.start("tokenlist-12");
-    boolean useIF = MapTool.getServerPolicy().isUseIndividualFOW();
-
-    final var movingTokens = new HashSet<GUID>();
-    for (final var selectionSet : selectionSetMap.values()) {
-      movingTokens.addAll(selectionSet.getTokens());
-    }
+    timer.start("token-list-12");
 
     // Selection and labels
     for (Token token : tokenPostProcessing) {
-      TokenPosition position = tokenPositionCache.get(token);
+      ZoneViewModel.TokenPosition position = viewModel.getTokenPositions().get(token.getId());
       if (position == null) {
         continue;
       }
-      Area bounds = position.bounds;
-
-      if (!bounds.getBounds().intersects(clipBounds)) {
-        continue;
-      }
-      Rectangle footprintBounds = token.getBounds(zone);
 
       // Count moving tokens as "selected" so that a border is drawn around them.
       boolean isSelected =
-          selectionModel.isSelected(token.getId()) || movingTokens.contains(token.getId());
+          selectionModel.isSelected(token.getId()) || viewModel.isTokenMoving(token.getId());
       if (isSelected) {
-        ScreenPoint sp = ScreenPoint.fromZonePoint(this, footprintBounds.x, footprintBounds.y);
-        double width = footprintBounds.width * getScale();
-        double height = footprintBounds.height * getScale();
-
-        ImageBorder selectedBorder =
-            token.getLayer().isStampLayer()
-                ? AppStyle.selectedStampBorder
-                : AppStyle.selectedBorder;
-        if (highlightCommonMacros.contains(token)) {
-          selectedBorder = AppStyle.commonMacroBorder;
-        }
-        if (!AppUtil.playerOwns(token)) {
-          selectedBorder = AppStyle.selectedUnownedBorder;
-        }
-        if (useIF && token.getLayer().supportsVision() && zoneView.isUsingVision()) {
-          Tool tool = MapTool.getFrame().getToolbox().getSelectedTool();
-          if (tool instanceof ExposeTool<?>) {
-            selectedBorder = RessourceManager.getBorder(Borders.FOW_TOOLS);
-          }
-        }
-        if (token.hasFacing()
-            && (token.getShape() == Token.TokenShape.TOP_DOWN || token.getLayer().isStampLayer())) {
-          AffineTransform oldTransform = clippedG.getTransform();
-
-          // Rotated
-          clippedG.translate(sp.x, sp.y);
-          clippedG.rotate(
-              Math.toRadians(token.getFacingInDegrees()),
-              width / 2 - (token.getAnchor().x * scale),
-              height / 2 - (token.getAnchor().y * scale)); // facing defaults to down, or -90
-          // degrees
-          selectedBorder.paintAround(clippedG, 0, 0, (int) width, (int) height);
-
-          clippedG.setTransform(oldTransform);
-        } else {
-          selectedBorder.paintAround(clippedG, (int) sp.x, (int) sp.y, (int) width, (int) height);
-        }
+        selectionRenderer.drawSelectBorder(clippedG, position);
         // Remove labels from the cache if the corresponding tokens are deselected
       } else if (!AppState.isShowTokenNames()) {
         labelRenderingCache.remove(token.getId());
@@ -2567,7 +2240,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           labelRenderingCache.put(tokId, labelRender);
         }
         // Create LabelRenderer using cached label.
-        Rectangle r = bounds.getBounds();
+        Rectangle r =
+            zoneScale.toScreenSpace(position.transformedBounds().getBounds2D()).getBounds();
         delayRendering(
             new LabelRenderer(
                 this,
@@ -2580,17 +2254,17 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
                 tokId));
       }
     }
-    timer.stop("tokenlist-12");
+    timer.stop("token-list-12");
 
-    timer.start("tokenlist-13");
+    timer.start("token-list-13");
     // Stacks
-    if (!tokenList.isEmpty() && tokenList.get(0).getLayer().isTokenLayer()) {
+    if (!tokenList.isEmpty() && tokenList.getFirst().getLayer().isTokenLayer()) {
       boolean hideTSI = AppPreferences.hideTokenStackIndicator.get();
-      if (tokenStackMap != null && !hideTSI) {
-        for (Token token : tokenStackMap.keySet()) {
+      if (!hideTSI) {
+        for (Token token : viewModel.getTokenStackMap().keySet()) {
           Area bounds = getTokenBounds(token);
           if (bounds == null) {
-            // token is offscreen
+            // token is off-screen
             continue;
           }
           BufferedImage stackImage = RessourceManager.getImage(Images.ZONE_RENDERER_STACK_IMAGE);
@@ -2608,13 +2282,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     if (clippedG != g) {
       clippedG.dispose();
     }
-    timer.stop("tokenlist-13");
-
-    if (figuresOnly) {
-      tempVisTokens.addAll(visibleTokenSet);
-    }
-
-    visibleTokenSet = Collections.unmodifiableSet(tempVisTokens);
+    timer.stop("token-list-13");
   }
 
   /**
@@ -2672,7 +2340,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
    * @return the set of GUIDs
    */
   public Set<GUID> getOwnedTokens(Set<GUID> tokenSet) {
-    Set<GUID> ownedTokens = new LinkedHashSet<GUID>();
+    Set<GUID> ownedTokens = new LinkedHashSet<>();
     if (tokenSet != null) {
       for (GUID guid : tokenSet) {
         Token token = zone.getToken(guid);
@@ -2691,15 +2359,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
    * @return List of tokens
    */
   public List<Token> getSelectedTokensList() {
-    List<Token> tokenList = new ArrayList<Token>();
-
-    for (GUID g : selectionModel.getSelectedTokenIds()) {
-      final var token = zone.getToken(g);
-      if (token != null) {
-        tokenList.add(token);
-      }
-    }
-    return tokenList;
+    return new ArrayList<>(viewModel.getSelectedTokenList());
   }
 
   /**
@@ -2725,13 +2385,15 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   /**
    * Selects the tokens inside a selection rectangle.
    *
-   * @param rect the selection rectangle
+   * @param screenRect the selection rectangle
    */
-  public List<GUID> getTokenIdsInBounds(Rectangle rect) {
+  public List<GUID> getTokenIdsInBounds(Rectangle screenRect) {
+    var rect = zoneScale.toWorldSpace(screenRect);
+
     final var tokens = new ArrayList<GUID>();
-    for (TokenPosition position : getTokenPositions(getActiveLayer())) {
-      if (rect.intersects(position.bounds.getBounds())) {
-        tokens.add(position.token.getId());
+    for (ZoneViewModel.TokenPosition position : getTokenPositions(getActiveLayer())) {
+      if (rect.intersects(position.transformedBounds().getBounds())) {
+        tokens.add(position.token().getId());
       }
     }
     return tokens;
@@ -2741,7 +2403,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     List<Token> visibleTokens = getTokensOnScreen();
     int newSelection = 0;
 
-    if (visibleTokens.size() == 0) {
+    if (visibleTokens.isEmpty()) {
       return;
     }
     if (selectionModel.isAnyTokenSelected()) {
@@ -2772,18 +2434,21 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   public Area getTokenBounds(Token token) {
-    TokenPosition position = tokenPositionCache.get(token);
-    if (position != null
-        && !position.maybeOnscreen(new Rectangle(0, 0, getSize().width, getSize().height))) {
-      position = null;
+    for (ZoneViewModel.TokenPosition position :
+        viewModel.getTokenPositionsForLayer(token.getLayer())) {
+      if (position.token() == token) {
+        return new Area(position.transformedBounds());
+      }
     }
-    return position != null ? position.bounds : null;
+    return null;
   }
 
   public Area getMarkerBounds(Token token) {
-    for (TokenPosition position : markerPositionList) {
-      if (position.token == token) {
-        return position.bounds;
+    // Note: this method must iterate only over markers. It cannot be implemented on top of
+    // getTokenBounds().
+    for (ZoneViewModel.TokenPosition position : viewModel.getMarkerPositions()) {
+      if (position.token() == token) {
+        return new Area(position.transformedBounds());
       }
     }
     return null;
@@ -2805,35 +2470,42 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
    * @param y screen location y
    * @return the token
    */
-  public Token getTokenAt(int x, int y) {
-    List<TokenPosition> positionList =
-        new ArrayList<TokenPosition>(getTokenPositions(getActiveLayer()));
+  public @Nullable Token getTokenAt(int x, int y) {
+    var zonePoint = ScreenPoint.convertToZone2d(this, x, y);
+
+    List<ZoneViewModel.TokenPosition> positionList =
+        new ArrayList<>(getTokenPositions(getActiveLayer()));
     Collections.reverse(positionList);
-    for (TokenPosition location : positionList) {
-      if (location.bounds.contains(x, y)) {
-        return location.token;
+    for (ZoneViewModel.TokenPosition location : positionList) {
+      if (location.transformedBounds().contains(zonePoint)) {
+        return location.token();
       }
     }
     return null;
   }
 
-  public Token getMarkerAt(int x, int y) {
-    List<TokenPosition> positionList = new ArrayList<TokenPosition>(markerPositionList);
+  public @Nullable Token getMarkerAt(int x, int y) {
+    var zonePoint = ScreenPoint.convertToZone2d(this, x, y);
+
+    List<ZoneViewModel.TokenPosition> positionList =
+        new ArrayList<>(viewModel.getMarkerPositions());
     Collections.reverse(positionList);
-    for (TokenPosition position : positionList) {
-      if (position.bounds.contains(x, y)) {
-        return position.token;
+    for (ZoneViewModel.TokenPosition position : positionList) {
+      if (position.transformedBounds().contains(zonePoint)) {
+        return position.token();
       }
     }
     return null;
   }
 
   public List<Token> getTokenStackAt(int x, int y) {
+    var tokenStackMap = viewModel.getTokenStackMap();
+
     Token token = getTokenAt(x, y);
-    if (token == null || tokenStackMap == null || !tokenStackMap.containsKey(token)) {
+    if (token == null || !tokenStackMap.containsKey(token)) {
       return null;
     }
-    List<Token> tokenList = new ArrayList<Token>(tokenStackMap.get(token));
+    List<Token> tokenList = new ArrayList<>(tokenStackMap.get(token));
     tokenList.sort(Token.COMPARE_BY_NAME);
     return tokenList;
   }
@@ -2847,7 +2519,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
    * @return the Label
    */
   public Label getLabelAt(int x, int y) {
-    List<LabelLocation> labelList = new ArrayList<LabelLocation>(labelLocationList);
+    List<LabelLocation> labelList = new ArrayList<>(labelLocationList);
     Collections.reverse(labelList);
     for (LabelLocation location : labelList) {
       if (location.bounds.contains(x, y)) {
@@ -2902,7 +2574,6 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   private void clearZoomDependantCaches() {
-    tokenPositionCache.clear();
     invalidateCurrentViewCache();
     tokenRenderer.zoomChanged();
   }
@@ -2918,12 +2589,11 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
 
   /** This makes sure that any image updates get refreshed. This could be a little smarter. */
   @Override
-  public boolean imageUpdate(Image img, int infoflags, int x, int y, int w, int h) {
+  public boolean imageUpdate(Image img, int infoFlags, int x, int y, int w, int h) {
     repaintDebouncer.dispatch();
-    return super.imageUpdate(img, infoflags, x, y, w, h);
+    return super.imageUpdate(img, infoFlags, x, y, w, h);
   }
 
-  //
   // DROP TARGET LISTENER
   /*
    * (non-Javadoc)
@@ -2961,8 +2631,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       List<Token> tokens, ZonePoint zp, List<Boolean> configureTokens, boolean showDialog) {
     GridCapabilities gridCaps = zone.getGrid().getCapabilities();
     boolean isGM = MapTool.getPlayer().isGM();
-    List<String> failedPaste = new ArrayList<String>(tokens.size());
-    List<GUID> selectThese = new ArrayList<GUID>(tokens.size());
+    List<String> failedPaste = new ArrayList<>(tokens.size());
+    List<GUID> selectThese = new ArrayList<>(tokens.size());
 
     ScreenPoint sp = ScreenPoint.fromZonePoint(this, zp);
     Point dropPoint = new Point((int) sp.x, (int) sp.y);
@@ -2971,7 +2641,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     for (Token token : tokens) {
       boolean configureToken = configureTokens.get(tokenIndex++);
 
-      // Get the snap to grid value for the current prefs and abilities
+      // Get the snap to grid value for the current preferences and abilities
       token.setSnapToGrid(
           gridCaps.isSnapToGridSupported() && AppPreferences.tokensStartSnapToGrid.get());
       if (token.isSnapToGrid()) {
@@ -2992,11 +2662,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       // Always set the layer
       token.setLayer(getActiveLayer());
 
-      // He who drops, owns, if there are not players already set
+      // He who drops, owns, if there are no players already set
       // and if there are already players set, add the current one to the list.
       // (Cannot use AppUtil.playerOwns() since that checks 'isStrictTokenManagement' and we want
-      // real ownership
-      // here.
+      // real ownership here.)
       if (!isGM && (!token.hasOwners() || !token.isOwner(MapTool.getPlayer().getName()))) {
         token.addOwner(MapTool.getPlayer().getName());
       }
@@ -3041,7 +2710,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
 
       // This looks redundant. But calling getType() retrieves the type of
       // the Token and returns NPC if the type can't be determined (raw image,
-      // corrupted token file, etc). So retrieving it and then turning around and
+      // corrupted token file, etc.). So retrieving it and then turning around and
       // setting it ensures it has a valid value without necessarily changing what
       // it was. :)
       Token.Type type = token.getType();
@@ -3063,18 +2732,16 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           }
         }
       } else {
-        // Player dropped, ensure it's a PC token
-        // (Why? Couldn't a Player drop an RPTOK that represents an NPC, such as for a summoned
-        // monster?
-        // Unfortunately, we can't know at this point whether the original input was an RPTOK or
-        // not.)
+        /* Player dropped, ensure it's a PC token
+        (Why? Couldn't a Player drop an RPTOK that represents an NPC, such as for a summoned monster?
+        Unfortunately, we can't know at this point whether the original input was an RPTOK or not.)
+        */
         token.setType(Token.Type.PC);
 
-        // For Players, check to see if the name is already in use. If it is already in use, make
-        // sure the
-        // current Player
-        // owns the token being duplicated (to avoid subtle ways of manipulating someone else's
-        // token!).
+        /* For Players, check to see if the name is already in use. If it is already in use, make
+        sure the current Player owns the token being duplicated (to avoid subtle ways of manipulating someone else's
+        token!).
+         */
         Token tokenNameUsed = zone.getTokenByName(token.getName());
         if (tokenNameUsed != null) {
           if (!AppUtil.playerOwns(tokenNameUsed)) {
@@ -3085,7 +2752,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           token.setName(newName);
         }
       }
-      // Make sure all the assets are transfered
+      // Make sure all the assets are transferred
       for (MD5Key id : token.getAllImageAssets()) {
         Asset asset = AssetManager.getAsset(id);
         if (asset == null) {
@@ -3116,8 +2783,8 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       MapTool.addMessage(TextMessage.gm(null, msg));
     }
     if (!failedPaste.isEmpty()) {
-      String mesg = I18N.getText("Token.error.unableToPaste", failedPaste);
-      TextMessage msg = TextMessage.gmMe(null, mesg);
+      String message = I18N.getText("Token.error.unableToPaste", failedPaste);
+      TextMessage msg = TextMessage.gmMe(null, message);
       MapTool.addMessage(msg);
     }
     // Copy them to the clipboard so that we can quickly copy them onto the map
@@ -3145,14 +2812,14 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
           if (result != null) {
             image = ImageManager.getImage(result.getImageId(), this);
           }
-        } catch (ParserException p) {
+        } catch (ParserException ignored) {
           // do nothing
         }
       }
     }
 
     if (image == null) {
-      // Adds this as observer so we can repaint once the image is ready. Fixes #1700.
+      // So we can repaint once the image is ready, add this as observer. Fixes #1700.
       image = ImageManager.getImage(token.getImageAssetId(), this);
     }
     return image;
@@ -3177,12 +2844,10 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     }
   }
 
-  public Set<GUID> getVisibleTokenSet() {
-    return visibleTokenSet;
-  }
-
   public List<Token> getVisibleTokens() {
-    List<Token> tokenList = new ArrayList<Token>(visibleTokenSet.size());
+    var visibleTokenSet = viewModel.getVisibleTokens(Layer.TOKEN);
+
+    List<Token> tokenList = new ArrayList<>(visibleTokenSet.size());
     for (GUID id : visibleTokenSet) {
       tokenList.add(zone.getToken(id));
     }
@@ -3312,7 +2977,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     repaintDebouncer.dispatch();
   }
 
-  // Should this be moved to GridRenderer?
+  // Should this be moved to GridRenderer? No. Lots of things depend on the grid.
   @Subscribe
   private void onGridChanged(GridChanged event) {
     if (event.zone() != this.zone) {
@@ -3324,25 +2989,13 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
     repaintDebouncer.dispatch();
   }
 
-  // Begin token common macro identification
-  private List<Token> highlightCommonMacros = new ArrayList<Token>();
-
-  public List<Token> getHighlightCommonMacros() {
-    return highlightCommonMacros;
-  }
-
-  public void setHighlightCommonMacros(List<Token> affectedTokens) {
-    highlightCommonMacros = affectedTokens;
-    repaintDebouncer.dispatch();
-  }
-
   /**
    * Our goal with this method (which overrides the parent's method) is to create a custom mouse
    * pointer that represents a group of tokens selected on the map. The idea is to provide some
    * feedback to the user that they have more than one token selected at the current time.
    *
    * <p>Unfortunately, while our custom cursor appears to be created correctly, it is never properly
-   * applied as the mouse pointer so there is no visual effect. Hence it's currently commented out
+   * applied as the mouse pointer so there is no visual effect, hence it is currently commented out
    * by using an "if (false)" around the code block.
    *
    * @param cursor the cursor to set.
@@ -3378,14 +3031,15 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       z.setFont(font);
       FontRenderContext frc = z.getFontRenderContext();
       TextLayout tl = new TextLayout(tokenName, font, frc);
-      Rectangle textbox = tl.getPixelBounds(null, 0, 0);
+      Rectangle textBox = tl.getPixelBounds(null, 0, 0);
 
-      // Now create a larger BufferedImage that will hold both the existing cursor and a token name
+      // Create a larger BufferedImage to hold both the existing cursor and a token name.
 
-      // Use the larger of the image width or string width, and the height of the image + the height
+      // Use the largest of the image width or string width, and the height of the image + the
+      // height
       // of the string to represent the bounding box of the 'arrow+tokenName'
       Rectangle bounds =
-          new Rectangle(Math.max(img.getWidth(), textbox.width), img.getHeight() + textbox.height);
+          new Rectangle(Math.max(img.getWidth(), textBox.width), img.getHeight() + textBox.height);
       BufferedImage cursor =
           new BufferedImage(bounds.width, bounds.height, Transparency.TRANSLUCENT);
       Graphics2D g2d = cursor.createGraphics();
@@ -3398,7 +3052,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
       Object oldAA = SwingUtil.useAntiAliasing(g2d);
       g2d.drawImage(
           img, new AffineTransform(1f, 0f, 0f, 1f, 0, 0), null); // Draw the arrow at 1:1 resolution
-      g2d.translate(0, img.getHeight() + textbox.height / 2);
+      g2d.translate(0, img.getHeight() + textBox.height / 2);
       g2d.setColor(Color.BLACK);
       GraphicsUtil.drawBoxedString(
           g2d, tokenName, 0, 0, SwingUtilities.LEFT); // The text draw here is not nearly
@@ -3409,13 +3063,13 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
 
       img.flush(); // Try to be friendly about memory usage. ;-)
       cursor.flush();
-    } catch (Exception e) {
+    } catch (Exception ignored) {
     }
     return c;
   }
 
   /**
-   * Returns the alpha level used to apply the noise to back ground repeating textures.
+   * Returns the alpha level used to apply the noise to background repeating textures.
    *
    * @return the alpha level used to apply the noise.
    */
@@ -3424,7 +3078,7 @@ public class ZoneRenderer extends JComponent implements DropTargetListener {
   }
 
   /**
-   * Returns the seed value used to generate the noise that is applied to tback ground repeating
+   * Returns the seed value used to generate the noise that is applied to the background repeating
    * images.
    *
    * @return the seed value used to generate the noise.
